--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,18 @@
-FROM node:alpine
-WORKDIR /usr/src/app
-COPY . /usr/src/app/
+# build environment
+FROM node:alpine as builder
+RUN mkdir /usr/app
+WORKDIR /usr/app
+ENV PATH /usr/app/node_modules/.bin:$PATH
+COPY package.json /usr/app/package.json
+RUN npm install --silent
+RUN npm install react-scripts@1.1.1 -g --silent
+COPY . /usr/app
+RUN npm run build
 
-RUN set -ex; \
-  yarn install;\
-  yarn run build;
-
+# production environment
 FROM nginx:alpine
-WORKDIR /usr/share/nginx/html
-COPY --from=0 /usr/src/app/build/ /usr/share/nginx/html
+RUN rm -rf /etc/nginx/conf.d
+COPY conf /etc/nginx
+COPY --from=builder /usr/app/dist /usr/share/nginx/html
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
