--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/daubaris/vugle#readme",
   "dependencies": {
+    "@reactions/component": "^2.0.2",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
