--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@reactions/component": "^2.0.2",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "chart.js": "^1.1.1",
     "classnames": "^2.2.6",
     "connected-react-router": "^4.5.0",
     "css-loader": "^1.0.0",
@@ -31,6 +32,7 @@
     "node-sass": "^4.9.3",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
+    "react-chartjs": "^1.2.0",
     "react-dom": "^16.5.2",
     "react-hot-loader": "^4.3.11",
     "react-icons": "^3.1.0",
