--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "css-loader": "^1.0.0",
     "evergreen-ui": "^4.0.0",
     "history": "^4.7.2",
+    "moment": "^2.22.2",
     "node-sass": "^4.9.3",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
